<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vote</string>
    <string name="log_in">Log In</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="emailAddress">Email Address</string>
    <string name="mobileNumber">91 1234567890</string>
    <string name="signUpButton">Sign Up</string>
    <string name="signInButton">Sign In</string>
    <string name="lbl_username">Name:</string>
    <string name="lbl_enter_username">Enter User Name</string>
    <string name="mobile">mobile</string>
    <string name="lbl_mbl">Mobile#</string>
    <string name="lbl_enter_mbl">Enter Mobile Number</string>
    <string name="he">He</string>
    <string name="she">She</string>
    <string name="others">Others</string>
    <string name="lbl_gndr">Gender:</string>
    <string name="lbl_age">Age Group:</string>
    <string name="age">age</string>
    <string name="submit">Verification</string>
    <string name="cancel">Cancel</string>
    <string name="Registration">Registration</string>
    <string name="Search">SearchItem</string>
    <string name="Showitem">ShowItem</string>
    <string name="recentSearch">Recent Search</string>
    <string name="trending">Trending</string>
    <string name="que_name">Question</string>
    <string name="que_tag">who is the prime minister of india?</string>
    <string name="campaign">campaign</string>
    <string name="statistics_view">Statistics</string>
    <string name="anchor">Anchor</string>
    <string name="reward">Reward By anchor</string>
    <string name="detail">Anchor and Client details</string>
    <string name="myProfile">My Profile</string>
    <string name="rewarddetail">RewardDetail</string>
    <string name="forgot">
        <u>Forgot Password</u>
    </string>
    <string name="otp">Enter OTP</string>
    <string name="otpButton">Request OTP</string>
    <string name="forgotp">ForgotPassword</string>
    <string name="subButton">Submit</string>
    <string name="forgotPasswordHeading">Forgot Password</string>
</resources>
