<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/uname_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_username" />

            <EditText
                android:id="@+id/fld_username"
                android:layout_width="326dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_username" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mbl_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uname_block"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_mbl" />

            <EditText
                android:id="@+id/fld_mbl"
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_enter_mbl" />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/sbmit_block"
            android:layout_below="@id/mbl_block"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Password" />

            <EditText
                android:id="@+id/signUpPwd"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="Password"
                />

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gndr_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_block"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_gndr" />

            <RadioGroup
                android:id="@+id/myRadioGroup"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/sound" >

                <RadioButton
                    android:id="@+id/radio_he"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/he" />

                <RadioButton
                    android:id="@+id/radio_she"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/she" />

                <RadioButton
                    android:id="@+id/radio_others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/others" />
            </RadioGroup>

            <Space
                android:layout_width="fill_parent"
                android:layout_height="20px"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="56dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/age_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gndr_block"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_age" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/age" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="58dp"
        android:layout_toStartOf="@+id/cancel"
        android:onClick="register"
        android:text="Verification" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/parent_linear_layout"
        android:layout_alignTop="@+id/submit"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="26dp"
        android:onClick="verification"
        android:text="Cancel" />

</RelativeLayout>