<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context=".ForgotPasswordActivity">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/Username"
                android:inputType="text"
                android:id="@+id/forgotPassword_username"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45dp"
                android:layout_alignParentEnd="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/otpButton"
                android:id="@+id/genotp"
                android:layout_below="@+id/forgotPassword_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:onClick="generateOtp"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:hint="@string/otp"
                  android:inputType="textPassword"
                  android:id="@+id/forgotPassword_otp"
                  android:layout_marginTop="47dp"
                  android:layout_below="@+id/genotp"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/subButton"
                android:id="@+id/submit"
                android:layout_below="@+id/forgotPassword_otp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55dp"
                android:onClick="submit"/>
    </RelativeLayout>
</LinearLayout>