<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:context=".SignInPageActivity"
            >

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:hint="@string/Username"
                android:inputType="textEmailAddress"
                android:id="@+id/emailAddress"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="45dp"
                android:layout_alignParentEnd="true"/>

        <EditText android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textAppearance="?android:attr/textAppearanceMedium"
                  android:hint="@string/Password"
                  android:inputType="textPassword"
                  android:id="@+id/password"
                  android:layout_marginTop="47dp"
                  android:layout_below="@+id/emailAddress"
                  android:layout_alignParentStart="true"
                  android:layout_alignParentEnd="true"/>
        <TextView android:id="@+id/forgot"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/forgot"
                  android:clickable="true"
                  android:onClick="forgotPassword"
                  android:layout_below="@+id/password"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="49dp"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/signInButton"
                android:id="@+id/signIn"
                android:layout_marginTop="40dp"
                android:nestedScrollingEnabled="false"
                android:onClick="login"
                android:layout_below="@+id/forgot"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</LinearLayout>