<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="Vote : Profile"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
            android:id="@+id/parent_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    </LinearLayout>

    <RelativeLayout
            android:id="@+id/uname_block"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginTop="14dp"
            android:weightSum="1">

        <TextView
                android:id="@+id/userName"
                android:layout_width="80dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="14dp"
                android:gravity="center"
                android:text="Name"/>

        <TextView
                android:id="@+id/mobile"
                android:layout_width="50dp"
                android:layout_height="34dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/userName"
                android:layout_toStartOf="@+id/mobileText"
                android:gravity="center"
                android:text="Mobile"/>

        <TextView
                android:id="@+id/userNameText"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:layout_above="@+id/mobileText"
                android:layout_marginLeft="19dp"
                android:layout_toEndOf="@+id/userName"
                android:gravity="center"
                android:text="TextView"/>

        <TextView
                android:id="@+id/mobileText"
                android:layout_width="fill_parent"
                android:layout_height="34dp"
                android:layout_alignStart="@+id/userNameText"
                android:layout_below="@+id/userName"
                android:layout_toEndOf="@+id/userName"
                android:layout_weight="1.07"
                android:gravity="center"
                android:text="TextView"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/age_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/uname_block"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AgeGroup"/>

        <Spinner
                android:id="@+id/profile_age"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/gndr_block"
                android:layout_alignStart="@+id/textView4"
                android:layout_alignTop="@+id/age_block"
                android:layout_toEndOf="@+id/age_block"
                android:prompt="@string/age"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/gndr_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/age_block"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/parent_linear_layout"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/gender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"/>

        <RadioGroup
                android:id="@+id/myRadioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/sound"
                android:gravity="center"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/gen1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/he"/>

            <RadioButton
                    android:id="@+id/gen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/age_block"
                    android:layout_alignTop="@+id/gndr_block"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/she"/>

            <RadioButton
                    android:id="@+id/gen3"
                    android:layout_width="163dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/gen2"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/age_block"
                    android:text="Others"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/push_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gndr_block"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/parent_linear_layout"
            android:orientation="horizontal"
            android:weightSum="1">

        <TextView
                android:id="@+id/Push"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Push Notification"/>

        <RadioGroup
                android:id="@+id/myradiogroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:checkedButton="@+id/sound"
                android:gravity="center"
                android:orientation="horizontal">

            <RadioButton
                    android:id="@+id/push1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="Yes"/>

            <RadioButton
                    android:id="@+id/push2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="No"/>
        </RadioGroup>
    </LinearLayout>

    <Button
            android:id="@+id/end_profile"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="DONE"
            android:onClick="showSearch"/>

</RelativeLayout>